--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.24.3",
     "axios": "^0.19.0",
     "formik": "^2.0.3",
     "prop-types": "^15.7.2",
